fix padding on mobile devices

--- a/public/assets/sass/contact.scss
+++ b/public/assets/sass/contact.scss
@@ -334,11 +334,14 @@
 /* Mobile - 360px */
 @media only screen and (min-width: 0rem) {
     #contact-1700 {
+        
         padding: var(--sectionPadding);
+        padding-top: 8rem;
         position: relative;
         z-index: 1;
 
         .cs-container {
+          
             width: 100%;
             /* changes to 1280px at desktop */
             max-width: calc(584 / 16 * 1rem);
@@ -360,6 +363,7 @@
             flex-direction: column;
             /* centers content horizontally, set to flex-start to left align */
             align-items: flex-start;
+            
         }
 
         .cs-title {
@@ -540,6 +544,7 @@
 @media only screen and (min-width: 48rem) {
     #contact-1700 {
         .cs-container {
+            
             max-width: calc(1280 / 16 * 1rem);
             flex-direction: row;
             justify-content: space-between;
